--- a/wsl.conf
+++ b/wsl.conf
@@ -2,4 +2,4 @@
 hostname = wsldocker
 generateHosts = false
 [boot]
-command="service docker start"
+command="service docker start; service ssh start; service cron start"
